# apollo-client

./: #CHANGELOG.md#  #gql.js#  .#gql.js  .all-contributorsrc  .attw.json  .babelrc  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .gitmodules  .gitpod.yml  .npmignore  .npmrc  .package.json.swp  .prettierignore  .prettierrc  .semgrepignore  .size-limit.cjs  .size-limits.json  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CLAUDE.md  COLLABORATORS.md  CONTRIBUTING.md  DESIGN.md  DESIGNS.md  Gruntfile.js  ISSUE_TRIAGE.md  LICENSE  README.md  REPRODUCTION_NOTES.md  ROADMAP.md  Upgrade.md  VERSIONING.md  (+48 more)
.api-reports/: api-report-cache.api.md  api-report-cache.md  api-report-core.api.md  api-report-core.md  api-report-dev.md  api-report-errors.api.md  api-report-errors.md  api-report-incremental.api.md  api-report-link.api.md  api-report-link_batch-http.api.md  api-report-link_batch-http.md  api-report-link_batch.api.md  api-report-link_batch.md  api-report-link_client-awareness.api.md  api-report-link_context.api.md  api-report-link_context.md  api-report-link_core.api.md  api-report-link_core.md  api-report-link_error.api.md  api-report-link_error.md  api-report-link_http.api.md  api-report-link_http.md  api-report-link_local-resolvers.api.md  api-report-link_local-resolvers_codegen.api.md  api-report-link_network-error.api.md  api-report-link_persisted-queries.api.md  api-report-link_ws.md  (+60 more)
scripts/router-e2e-defer-tests/subgraphs/reviews/: Dockerfile  app.py  pyproject.toml  reviews.graphql  schema.py  tracing.py
(+3507 files in other folders)
